# desktop/src/types.ts
@@ -14,6 +14,8 @@ export type Routine = components["schemas"]["Routine"];
 export type RoutinePatch = components["schemas"]["RoutinePatch"];
 export type RoutineCreate = components["schemas"]["RoutineCreate"];
 export type Skill = components["schemas"]["Skill"];
+export type SkillBody = components["schemas"]["SkillBody"];
+export type SkillPatch = components["schemas"]["SkillPatch"];
 export type Plugin = components["schemas"]["Plugin"];
 export type PluginAuth = components["schemas"]["PluginAuth"];
 export type PluginCreate = components["schemas"]["PluginCreate"];
